[package]
name = "hel-random"
authors = ["Hellaeh <me@hellaeh.com>"]
version = "0.5.2"
edition = "2021"
description = "Simple RNG with weak entropy source (alloc) and xoshiro256++ hashing"
license = "GPL-3.0"
repository = "https://github.com/Hellaeh/random.git"
keywords = ["rng", "random"]
documentation = "https://docs.rs/hel-random"
readme = "README.md"
